# template-graph-library

./: CMakeLists.txt  Jenkinsfile  LICENSE.md  README.md
.github/workflows/: c-cpp.yml
lib/: json.h
scripts/: Build.sh  Test.sh
src/: BinarySearchTree.hpp  Edge.hpp  Graph.hpp  Node.hpp  Vertex.hpp  main.cpp
src/graph/: BinarySearchTree.hpp  Edge.hpp  Graph.hpp  Node.hpp  UnitVisitingOperations.hpp  Vertex.hpp  VisitingOperations.hpp
src/graph2D/: BinarySearchTree2D.hpp  Graph2D.hpp  Node2D.hpp  Structure2D.hpp  Vertex2D.hpp
src/graph2D_lib/: Structure2D.hpp
src/graph2D_lib/bst2D/: BinarySearchTree2D.hpp  Node2D.hpp
src/graph2D_lib/directed_graph2D/: Graph2D.hpp  Vertex2D.hpp
src/graph_lib/: UnitVisitingOperations.hpp
src/graph_lib/bst/: BinarySearchTree.hpp  Node.hpp
src/graph_lib/directed_graph/: Edge.hpp  Graph.hpp  Vertex.hpp
src/gui/: ActionType.hpp  Button.cpp  Button.hpp  UserInterface.cpp  UserInterface.hpp  gui.hpp
src/visualization/: VisualizedBST2D.hpp  VisualizedGraph2D.hpp
src/visualization_for_graphs/: VisualizedBST2D.hpp  VisualizedGraph2D.hpp
test/: binary_search_tree_tests.cc  edge_tests.cc  graph_tests.cc  node_tests.cc  vertex_tests.cc
test/graph/: binary_search_tree_tests.cpp  edge_tests.cpp  graph_tests.cpp  vertex_tests.cpp
test/graph/bst/: binary_search_tree_tests.cpp
test/graph/directed_graph/: edge_tests.cpp  graph_tests.cpp  vertex_tests.cpp
